@@ -1,6 +1,7 @@
 requires 'perl', '5.008001';
 
 requires 'autobox';
+requires 'autobox::Core';
 requires 'true';
 requires 'Carp';
 
@@ -8,7 +9,6 @@ on 'test' => sub {
     requires 'Test::More', '0.98';
     requires 'Test::Differences';
     requires 'Test::Exception';
-    requires 'autobox::Core';
     requires 'Moo';
 };
 
