@@ -19,6 +19,24 @@
 ** compact - without undefined
 ** compactTrue - without false
 ** without - grep -v value
+** grep --> filter
+*** so I can write "grep" instead of autobox::Core
+*** deprecate grep, but keep the alias
+** grep, grep_by third arg more dwim
+*** third arg sub (defaults to true)
+**** if string, do eq
+**** if regex, do =~
+** enforce scalar / list context, to ref / array, hash
+*** Also, coerce to scalar context / reference.
+**** to_ref / as_ref
+**** to_list, as_list
+**** as_hash, as_array, as_ref
+*** DONE use autobox::Core inside Transform
+**** use autobox::Core, so we can use e.g. split
+**** Provide this as a parameter with core as the default?
+*** sub uplevel or whatnot
+**** so warnings and dies are reported from the caller.
+
 * Hash
 ** DONE key_value($key, $new_key_name=$key) : ($new_key_name => $value) | { $new_key_name => $value }
 *** exists
